# Sortnnet

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  progressMessage.txt  project_sections.md  settings.json  skill.json
electron/: main.js  package-lock.json  package.json  preload.js
electron/renderer/: chat.css  chat.html  chat.js  pet.css  pet.html  pet.js
src/: CCConnect.rs  CCEverything.rs  CCGitConnect.rs  CCSort.rs  main.rs
src/ccrecorder/: analyzer.rs  executor.rs  interactive.rs  main.rs  planner.rs  rules.rs
