[package]
name = "desktop_pet"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.12"
base64 = "0.22"
regex = "1.11"
walkdir = "2.5"
colored = "2"
dialoguer = "0.11"
indicatif = "0.17"
chrono = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
git2 = { version = "0.20", features = ["vendored-libgit2"] }
